--- a/style.css
+++ b/style.css
@@ -3,3 +3,40 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+h1 {
+  color: black;
+  text-align: center;
+}
+img {
+  display: block;
+  margin: auto;
+  width: 900px;
+}
+
+nav >a{
+  text-align: center;
+  padding: 10px;
+  background-color: aqua;
+}
+figcaption {
+  text-align: center;
+  font-size: small;
+}
+#featured-property {
+  text-align: center;
+}
+#featured-property > p {
+  width: 800px;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+}
+#details > div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
